# tinyutils

./: .env.gcloud  .env.moonshot  .env.preview.local  .gitignore  .vercelignore  .vibe-config.json  ADSENSE_SETUP.md  AGENTS.md  CHANGES-v1.3.0-rc2.txt  CHATGPT.md  CONTRIBUTING-CAVIN.md  DEPLOY_PRODUCTION_CHECKLIST.md  GIT_REMOTES.txt  GOOGLECLOUD.md  JUSTEVERY_AGENTS_LIST.md  LATEST_COMMIT.txt  LICENSE  PATH  PERFORMANCE_IMPROVEMENTS.md  PREVIEW.md  PREVIEW_AUTH_BYPASS_CHECKLIST.md  PREVIEW_SMOKE_CHECKLIST.md  README-VERCEL.md  README.md  README_DEPLOY.md  README_FOR_PRO_REASONING.md  SECURITY.md  TARBALL_MANIFEST.md  TESTING.md  TinyBackups  USER_CHECKLIST.md  WORKSTREAM_2_MATRIX.txt  WORKSTREAM_2_PROPOSAL.md  about.html  ads.txt  canva-asset-prompts.md  chatgpt-deep-research-prompt.md  claude-desktop-icon-test.md  code-agent-moonshot  contact.html  (+41 more)
.debug/: AGENT_TMP_STATE.md  preview_url_token.txt
.gemini/: settings.json
.qwen/: settings.json
.venv312/: pyvenv.cfg
agents/: roster.json
api/: bulk-replace.py  check.js  csv_join.py  encoding-doctor.js  fence.js  health.js  json_tools.py  metafetch.js  multi-file-search-replace.js  pdf_extract.py  requirements.txt  sitemap-delta.js  wayback-fixer.js
api/convert/: .vc-config.json  Pipfile  __init__.py  _pdf_external.py  app.py  convert_service.py  convert_types.py  index.py  index.py.bak  pyproject.toml  requirements.txt
bk-restore/: pandoc_vendor_implementation_notes.md  recreate_pandoc_vendor_changes.py
blog/: index.html
convert/: __init__.py  service.py  types.py
convert_backend/: __init__.py  app.py  (+10 more)
(+1307 files in other folders)
