[project]
name = "convert"
version = "1.0.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi>=0.110,<1.0",
    "pydantic>=2.6,<3.0",
    "requests>=2.31,<3.0",
    "pypandoc>=1.12,<2.0",
    "chardet>=5.0,<6.0",
    "beautifulsoup4>=4.12,<5.0",
    "pypdf>=3.17,<5.0",
    "reportlab>=4.0,<5.0",
    "pdfplumber>=0.10,<1.0",
    "pdfminer.six>=20231228",
    "python-docx>=1.1,<2.0",
    "mammoth>=1.6,<2.0",
]
